--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,10 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 
+spring.mvc.view.prefix: /WEB-INF/
+spring.mvc.view.suffix: .jsp
+spring.messages.basename=validation
+
 #Postgresql Configuration
 #spring.jpa.show-sql=true
 #spring.jpa.hibernate.ddl-auto=create
