--- a/pom.xml
+++ b/pom.xml
@@ -113,6 +113,16 @@
                     <artifactId>jaxb-impl</artifactId>
                     <version>2.3.1</version>
                 </dependency>
+                <dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<optional>true</optional>
+		</dependency>
+                <dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt</artifactId>
+			<version>0.9.1</version>
+		</dependency>
 	</dependencies>
 
 	<build>
