--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,13 @@
 # MySQL Configuration
-#spring.datasource.url=jdbc:mysql://localhost:3306/asadb
-#spring.datasource.username=root
-#spring.datasource.password=indonesia
-#spring.jpa.show-sql=true
-#spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+spring.datasource.url=jdbc:mysql://localhost:3306/asadb
+spring.datasource.username=root
+spring.datasource.password=indonesia
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 
 #Postgresql Configuration
-spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+#spring.jpa.show-sql=true
+#spring.jpa.hibernate.ddl-auto=create
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 
